--- a/index.html
+++ b/index.html
@@ -743,10 +743,10 @@
     </div>
 
     <script>
-        const API_BASE = 'https://interviewa.app.n8n.cloud/webhook';
-        const UPLOAD_URL = `${API_BASE}/upload-resume-latest`;
-        const CHAT_URL = `${API_BASE}/interview-chat-latest`;
-        const SPEECH_TO_TEXT_URL = `${API_BASE}/speech-to-text-latest`;
+        const API_BASE = 'https://virtualaimock.app.n8n.cloud/webhook';
+        const UPLOAD_URL = `${API_BASE}/upload-resume`;
+        const CHAT_URL = `${API_BASE}/interview-chat`;
+        const SPEECH_TO_TEXT_URL = `${API_BASE}/speech-to-text`;
         
         let interviewStarted = false;
         let timeRemaining = 900;
