--- a/index.html
+++ b/index.html
@@ -333,15 +333,18 @@
     margin-top: 20px;
 }
 
-	.category-btn.warmup,
+.category-btn.warmup,
 .category-btn.coding {
     grid-column: span 1;
 }
 
 .category-btn.technical,
-.category-btn.behavioral,
-.category-btn.techno-behavioral {
+.category-btn.behavioral {
     grid-column: span 1;
+}
+
+.category-btn.techno-behavioral {
+    grid-column: 1 / -1;
 }
 
 .category-btn.complete {
