--- a/index.html
+++ b/index.html
@@ -1076,8 +1076,9 @@ const typeDisplayNames = {
     'comprehensive': 'Complete Interview'
 };
 
-addMessage(`👨‍💼 <strong>${typeDisplayNames[selectedInterviewType]} Started</strong><br>Hello! Let's begin with a simple question: Tell me about yourself and your background.`);
-const aiResponse = data.response || data.output || data.text || data.question || '';
+addMessage(`👨‍💼 <strong>${typeDisplayNames[selectedInterviewType]} Started</strong><br>Welcome! I'm excited to get to know you better. Let's start with the classic opening question: Tell me about yourself.`);
+			
+			const aiResponse = data.response || data.output || data.text || data.question || '';
 
 if (aiResponse && aiResponse.trim()) {
     setTimeout(() => {
