--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@ const typeDisplayNames = {
     'comprehensive': 'Complete Interview'
 };
 
-addMessage(`👨‍💼 <strong>${typeDisplayNames[selectedInterviewType]} Started</strong><br>Welcome! I'm excited to get to know you better. Let's start with the classic opening question: Tell me about yourself.`);
+addMessage(`👨‍💼 <strong>${typeDisplayNames[selectedInterviewType]} Started</strong><br>Welcome! I'm your AI Interviewer, and I'll be conducting your <strong>${selectedInterviewType}</strong> mock interview today. Let's start with a classic opener: Could you briefly tell me about yourself and your technical background?`);
 			
 			const aiResponse = data.response || data.output || data.text || data.question || '';
 
