--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@ const typeDisplayNames = {
     'comprehensive': 'Complete Interview'
 };
 
-const welcomeMessage = `👨‍💼 <strong>${typeDisplayNames[selectedInterviewType]} Started</strong><br>Welcome! I'm your AI Interviewer, and I'll be conducting your <strong>${selectedInterviewType}</strong> mock interview today. Let's start with a classic opener: Could you briefly tell me about yourself and your technical background?`;
+const welcomeMessage = `<strong>${typeDisplayNames[selectedInterviewType]} Started</strong><br>Welcome! I'm your AI Interviewer, and I'll be conducting your <strong>${selectedInterviewType}</strong> mock interview today. Let's start with a classic opener: Could you briefly tell me about yourself and your technical background?`;
 const welcomeElement = addMessage(welcomeMessage, false);
 
 const tempDiv = document.createElement('div');
