--- a/index.html
+++ b/index.html
@@ -1438,7 +1438,7 @@ setTimeout(() => {
         feedbackDiv.className = 'feedback-section';
         feedbackDiv.innerHTML = `
             <h4>📝 Help Us Improve</h4>
-            <p>Your feedback is valuable! Share your experience (optional)</p>
+            <p>Your feedback is valuable! Share your experience (optional) or go back to select another interview type</p>
             <textarea id="feedbackText" class="feedback-textarea" placeholder="Tell us about your interview experience, any issues you faced, or suggestions for improvement..."></textarea>
             <button id="feedbackSubmitBtn" class="feedback-submit-btn" onclick="submitFeedback()">Submit Feedback</button>
         `;
