--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   gtag('js', new Date());
 
   gtag('config', 'G-PQJTN8RL74');
-	 gtag('config', 'G-PQJTN8RL74', {
+gtag('config', 'G-PQJTN8RL74', {
     'send_page_view': false
-  });
+}, { debug_mode: true });
 </script>
 
 	<script>
