--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
   gtag('config', 'G-PQJTN8RL74');
 gtag('config', 'G-PQJTN8RL74', {
-    'send_page_view': false
-}, { debug_mode: true });
+    send_page_view: false,
+    debug_mode: true
+});
 </script>
 
 	<script>
