--- a/index.html
+++ b/index.html
@@ -953,13 +953,15 @@ async function showFeedbackOptions(reason) {
     feedbackDiv.className = 'feedback-section';
     feedbackDiv.innerHTML = `
         <h4>📝 Quick Feedback</h4>
-        <p>We noticed you ended the interview early. Could you tell us why?</p>
+        <p>We noticed you ended the interview early — either by staying idle or typing END. Could you tell us why?</p>
         <div style="display: flex; flex-direction: column; gap: 10px; margin: 16px 0;">
-            <button class="feedback-option-btn" onclick="submitQuickFeedback('too_hard', '${reason}')">😰 It's too hard</button>
-            <button class="feedback-option-btn" onclick="submitQuickFeedback('no_time', '${reason}')">⏰ I don't have time right now</button>
-            <button class="feedback-option-btn" onclick="submitQuickFeedback('need_prep', '${reason}')">📚 I want to prepare more and come back</button>
-            <button class="feedback-option-btn" onclick="submitQuickFeedback('dont_like', '${reason}')">👎 I don't like it</button>
-        </div>
+            <button class="feedback-option-btn" onclick="submitQuickFeedback('just_exploring', '${reason}')">🤔 I was just exploring / testing the platform</button>
+            <button class="feedback-option-btn" onclick="submitQuickFeedback('no_time', '${reason}')">⏰ I didn’t have enough time to continue</button>
+            <button class="feedback-option-btn" onclick="submitQuickFeedback('need_prep', '${reason}')">📚 I’d like to prepare more and try again later</button>
+            <button class="feedback-option-btn" onclick="submitQuickFeedback('too_hard', '${reason}')">😰 The questions felt too difficult</button>
+			<button class="feedback-option-btn" onclick="submitQuickFeedback('different_interviewtype', '${reason}')">💬 I’d prefer a different interview type or role</button>
+			<button class="feedback-option-btn" onclick="submitQuickFeedback('dont_like', '${reason}')">👎 I didn’t enjoy the interview experience</button>
+		</div>
     `;
     document.getElementById('chatMessages').appendChild(feedbackDiv);
     document.getElementById('chatMessages').scrollTop = document.getElementById('chatMessages').scrollHeight;
@@ -992,8 +994,16 @@ async function submitQuickFeedback(option, reason) {
         if (feedbackSection) {
             feedbackSection.innerHTML = '<h4>✅ Thank you for your feedback!</h4><p>We hope to see you again soon.</p>';
         }
+        
+        interviewStarted = false;
+        
     } catch (error) {
         console.error('Error submitting quick feedback:', error);
+        const feedbackSection = document.querySelector('.feedback-section');
+        if (feedbackSection) {
+            feedbackSection.innerHTML = '<h4>✅ Thank you for your feedback!</h4><p>We hope to see you again soon.</p>';
+        }
+        interviewStarted = false;
     }
 }
 		
